// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  Viewing 
  1 expense totaling $1.95
</div>
`;

exports[`should render ExpensesSummary with 2 expenses 1`] = `
<div>
  Viewing 
  2 expenses totaling $196.95
</div>
`;
